fix text-align:justify test

--- a/test/test1.css
+++ b/test/test1.css
@@ -117,7 +117,7 @@ input[type="submit"] {
     margin: 5px 0 0 211px;
 }
 .test-align-justify {
-    text-align: justify;
+    text-align: justify !important;
 }
 .test-line-height {
     line-height: 3em;
